feat: make a basic page structure and view

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,35 @@
   <link rel="stylesheet" href="./main.css">
   <title>Online-store</title>
 </head>
+
 <body>
-  
+
+  <header class="header">
+    <h1>Online-store</h1>
+    <h2>Musical instruments</h2>
+  </header>
+
+  <main>
+    <div class="top-panel">
+      <!--TODO: сделать прилипчивой-->
+      <div class="sort">Сортировка</div>
+      <div class="search">Поиск</div>
+      <div class="cart">Карзина</div>
+    </div>
+    <div class="wrapper">
+      <aside class="side-panel">
+        Фильтры
+      </aside>
+      <div class="showcase"></div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="rsschool">Ссылка на курсы</div>
+    <div class="develope-date">07.2022</div>
+    <div class="developer">Ссылка на разработчика</div>
+  </footer>
+
 </body>
+
 </html>
