feat: make method to create item card and fill the showcase with cards

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -17,14 +17,13 @@
   </header>
 
   <main>
-    <div class="top-panel">
-      <!--TODO: сделать прилипчивой-->
+    <div class="top-panel"> <!--TODO: сделать прилипчивой-->
       <div class="sort">Сортировка</div>
       <div class="search">Поиск</div>
       <div class="cart">Карзина</div>
     </div>
     <div class="wrapper">
-      <aside class="side-panel">
+      <aside class="side-panel"> <!--TODO: сделать прилипчивой-->
         Фильтры
       </aside>
       <div class="showcase"></div>
