feat: make is popular filter, add more instruments

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google" value="notranslate">
   <link rel="stylesheet" href="./main.css">
   <title>Online-store</title>
 </head>
@@ -25,6 +26,10 @@
     <div class="wrapper">
       <aside class="side-panel"> <!--TODO: сделать прилипчивой-->
         Фильтры
+        <label class="side-panel__popular-label">
+          <input class="side-panel__popular-checkbox" type="checkbox">
+          Хит продаж
+        </label>
       </aside>
       <div class="showcase"></div>
     </div>
