feat: make type filter

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -26,6 +26,25 @@
     <div class="wrapper">
       <aside class="side-panel"> <!--TODO: сделать прилипчивой-->
         Фильтры
+        <div class="side-panel__type-filter side-panel__filter">
+          <h3>Тип инструментов:</h3>
+          <label class="type-filter__guitars-label">
+            <input class="type-filter__guitars-checkbox" type="checkbox">
+            Гитары
+          </label>
+          <label class="type-filter__keyboards-label">
+            <input class="type-filter__keyboards-checkbox" type="checkbox">
+            Синтезаторы
+          </label>
+          <label class="type-filter__harmonicas-label">
+            <input class="type-filter__harmonicas-checkbox" type="checkbox">
+            Губные гармошки
+          </label>
+          <label class="type-filter__drums-label">
+            <input class="type-filter__drums-checkbox" type="checkbox">
+            Барабаны
+          </label>
+        </div>
         <label class="side-panel__popular-label">
           <input class="side-panel__popular-checkbox" type="checkbox">
           Хит продаж
