feat: make a producer filter

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -18,33 +18,125 @@
   </header>
 
   <main>
-    <div class="top-panel"> <!--TODO: сделать прилипчивой-->
+    <div class="top-panel">
+      <!--TODO: сделать прилипчивой-->
       <div class="sort">Сортировка</div>
       <div class="search">Поиск</div>
       <div class="cart">Карзина</div>
     </div>
     <div class="wrapper">
-      <aside class="side-panel"> <!--TODO: сделать прилипчивой-->
-        Фильтры
+      <aside class="side-panel">
+        <!--TODO: сделать прилипчивой-->
+        Filters
+
         <div class="side-panel__type-filter side-panel__filter">
-          <h3>Тип инструментов:</h3>
+          <h3>Instruments type:</h3>
           <label class="type-filter__guitars-label">
             <input class="type-filter__guitars-checkbox" type="checkbox">
-            Гитары
+            Guitars
           </label>
           <label class="type-filter__keyboards-label">
             <input class="type-filter__keyboards-checkbox" type="checkbox">
-            Синтезаторы
+            Keyboards
           </label>
           <label class="type-filter__harmonicas-label">
             <input class="type-filter__harmonicas-checkbox" type="checkbox">
-            Губные гармошки
+            Harmonicas
           </label>
           <label class="type-filter__drums-label">
             <input class="type-filter__drums-checkbox" type="checkbox">
-            Барабаны
+            Drums
           </label>
         </div>
+
+        <div class="side-panel__producer-filter side-panel__filter">
+          <h3>Producer:</h3>
+          <label class="producer-filter__yamaha-label">
+            <input class="producer-filter__yamaha-checkbox" type="checkbox">
+            Yamaha
+          </label>
+          <label class="producer-filter__fender-label">
+            <input class="producer-filter__fender-checkbox" type="checkbox">
+            Fender
+          </label>
+          <label class="producer-filter__gibson-label">
+            <input class="producer-filter__gibson-checkbox" type="checkbox">
+            Gibson
+          </label>
+          <label class="producer-filter__casio-label">
+            <input class="producer-filter__casio-checkbox" type="checkbox">
+            Casio
+          </label>
+          <label class="producer-filter__korg-label">
+            <input class="producer-filter__korg-checkbox" type="checkbox">
+            Korg
+          </label>
+          <label class="producer-filter__hohner-label">
+            <input class="producer-filter__hohner-checkbox" type="checkbox">
+            Hohner
+          </label>
+          <label class="producer-filter__seydel-sohne-label">
+            <input class="producer-filter__seydel-sohne-checkbox" type="checkbox">
+            Seydel Sohne
+          </label>
+          <label class="producer-filter__suzuki-label">
+            <input class="producer-filter__suzuki-checkbox" type="checkbox">
+            Suzuki
+          </label>
+          <label class="producer-filter__tama-label">
+            <input class="producer-filter__tama-checkbox" type="checkbox">
+            Tama
+          </label>
+          <label class="producer-filter__ludwig-label">
+            <input class="producer-filter__ludwig-checkbox" type="checkbox">
+            Ludwig
+          </label>
+        </div>
+
+        <div class="side-panel__color-filter side-panel__filter">
+          <h3>Color:</h3>
+          <label class="color-filter__white-label">
+            <input class="color-filter__white-checkbox" type="checkbox">
+            White
+          </label>
+          <label class="color-filter__black-label">
+            <input class="color-filter__black-checkbox" type="checkbox">
+            Black
+          </label>
+          <label class="color-filter__metallic-label">
+            <input class="color-filter__metallic-checkbox" type="checkbox">
+            Metallic
+          </label>
+          <label class="color-filter__blue-label">
+            <input class="color-filter__blue-checkbox" type="checkbox">
+            Blue
+          </label>
+          <label class="color-filter__red-label">
+            <input class="color-filter__red-checkbox" type="checkbox">
+            Red
+          </label>
+          <label class="color-filter__green-label">
+            <input class="color-filter__green-checkbox" type="checkbox">
+            Green
+          </label>
+          <label class="color-filter__yellow-label">
+            <input class="color-filter__yellow-checkbox" type="checkbox">
+            Yellow
+          </label>
+          <label class="color-filter__orange-label">
+            <input class="color-filter__orange-checkbox" type="checkbox">
+            Orange
+          </label>
+          <label class="color-filter__brown-label">
+            <input class="color-filter__brown-checkbox" type="checkbox">
+            Brown
+          </label>
+          <label class="color-filter__wood-label">
+            <input class="color-filter__wood-checkbox" type="checkbox">
+            Wood
+          </label>
+        </div>
+
         <label class="side-panel__popular-label">
           <input class="side-panel__popular-checkbox" type="checkbox">
           Хит продаж
