feat: make search function

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -32,7 +32,12 @@
           <option value="ByPriceBackward">From expensive to cheap 🠗</option>
         </select>
       </div>
-      <div class="search">Поиск</div>
+      <div class="top-panel__search-block">
+        <label class="search-block__search-label">
+          <input class="search-block__search-input" type="search" name="search" autofocus placeholder="Search">
+        </label>
+        <button class="top-panel__search-button" type="buttor">search</button>
+      </div>
       <div class="cart">Корзина</div>
     </div>
     <div class="wrapper">
