feat: make a cart

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -36,9 +36,13 @@
         <label class="search-block__search-label">
           <input class="search-block__search-input" type="search" name="search" autofocus placeholder="Search">
         </label>
-        <button class="top-panel__search-button" type="buttor">search</button>
+        <button class="top-panel__search-btn" type="button">Search</button>
       </div>
-      <div class="cart">Корзина</div>
+      <div class="cart">
+        <img class="cart__img" src="./assets/img/cart.png" alt="cart" width="70" height="70">
+        <p class="cart__counter">0</p>
+        <button class="cart__clean-btn" type="button">Clean cart</button>
+      </div>
     </div>
     <div class="wrapper">
       <aside class="side-panel">
