feat: make price-slider

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -157,6 +157,16 @@
           </label>
         </div>
 
+        <div class="side-panel__price-filter">
+          <h3>Price:</h3>
+          <input class="price-filter__input-min filter__input-min" type="range" min="0" max="600000" step="1000" value="0">
+          <input class="price-filter__input-max filter__input-max" type="range" min="0" max="600000" step="1000" value="600000">
+          <div class="price-filter__values-div">
+            <p class="price-filter__min">0</p>
+            <p class="price-filter__max">600000</p>
+          </div>
+        </div>
+
         <label class="side-panel__popular-label">
           <input class="side-panel__popular-checkbox" type="checkbox">
           Хит продаж
