feat: add release year slider

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -161,9 +161,19 @@
           <h3>Price:</h3>
           <input class="price-filter__input-min filter__input-min" type="range" min="0" max="600000" step="1000" value="0">
           <input class="price-filter__input-max filter__input-max" type="range" min="0" max="600000" step="1000" value="600000">
-          <div class="price-filter__values-div">
+          <div class="price-filter__values-div filter__values-div">
             <p class="price-filter__min">0</p>
             <p class="price-filter__max">600000</p>
+          </div>
+        </div>
+
+        <div class="side-panel__release-date-filter">
+          <h3>Release year:</h3>
+          <input class="release-date-filter__input-min filter__input-min" type="range" min="1847" max="2021" step="1" value="1847">
+          <input class="release-date-filter__input-max filter__input-max" type="range" min="1847" max="2021" step="1" value="2021">
+          <div class="release-date-filter__values-div filter__values-div">
+            <p class="release-date-filter__min">1847</p>
+            <p class="release-date-filter__max">2021</p>
           </div>
         </div>
 
