make reset filters button

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -181,6 +181,8 @@
           <input class="side-panel__popular-checkbox" type="checkbox">
           Хит продаж
         </label>
+
+        <button class="side-panel__reset-filter-button" type="button">Reset filters</button>
       </aside>
       <div class="showcase"></div>
     </div>
