feat: partly make lockal storage saving

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -182,7 +182,8 @@
           Хит продаж
         </label>
 
-        <button class="side-panel__reset-filter-button" type="button">Reset filters</button>
+        <button class="side-panel__reset-filter-btn" type="button">Reset filters</button>
+        <button class="side-panel__reset-local-storage-btn" type="button">Reset local storage</button>
       </aside>
       <div class="showcase"></div>
     </div>
