feat: make some design and adaptation

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google" value="notranslate">
   <link rel="stylesheet" href="./main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link type="image/x-icon" href="./assets/img/favicon.ico" rel="shortcut icon">
   <title>Online-store</title>
 </head>
 
@@ -179,7 +183,7 @@
 
         <label class="side-panel__popular-label">
           <input class="side-panel__popular-checkbox" type="checkbox">
-          Хит продаж
+          Hit!
         </label>
 
         <button class="side-panel__reset-filter-btn" type="button">Reset filters</button>
@@ -190,9 +194,11 @@
   </main>
 
   <footer class="footer">
-    <div class="rsschool">Ссылка на курсы</div>
+    <a class="rsschool" href="https://rs.school/" target="_blank">
+      <img src="./assets/img/rs_school_js.svg" alt="rsschool" width="150px">
+    </a>
     <div class="develope-date">07.2022</div>
-    <div class="developer">Ссылка на разработчика</div>
+    <a class="developer" href="https://github.com/Legat14" target="_blank">developed by Legat14</a>
   </footer>
 
 </body>
