feat: add function to remove items from cart by click item button again

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -37,7 +37,7 @@
         </select>
       </div>
       <div class="top-panel__search-block">
-        <label class="search-block__search-label">
+        <label class="search-block__search-label" autocomplete="off">
           <input class="search-block__search-input" type="search" name="search" autofocus placeholder="Search">
         </label>
         <button class="top-panel__search-btn" type="button">Search</button>
