refactor: change principle of getting data

--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -51,7 +51,7 @@
     <div class="wrapper">
       <aside class="side-panel">
         <!--TODO: сделать прилипчивой-->
-        Filters
+        <h3>Filters:</h3>
 
         <div class="side-panel__type-filter side-panel__filter">
           <h3>Instruments type:</h3>
