--- a/online-store/src/index.html
+++ b/online-store/src/index.html
@@ -36,8 +36,8 @@
         </select>
       </div>
       <div class="top-panel__search-block">
-        <label class="search-block__search-label" autocomplete="off">
-          <input class="search-block__search-input" type="search" name="search" autofocus placeholder="Search">
+        <label class="search-block__search-label">
+          <input class="search-block__search-input" type="search" name="search" autofocus placeholder="Search" autocomplete="off">
         </label>
         <button class="top-panel__search-btn" type="button">Search</button>
       </div>
